--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stopwatch Timer</title>
+    <title>Timerize - Stay on Track, Manage Your Tasks</title>
     <link rel="stylesheet" href="styles.css" />
 
     <!-- Favicon -->
@@ -45,6 +45,8 @@
             <div id="display" class="timer-display">00:00:00</div>
 
             <div class="input-container">
+              <div class="alert-box"></div>
+
               <input
                 type="text"
                 id="taskInput"
