change default value on taskHistory

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
               <input
                 type="text"
-                id="taskInput"
+                class="task-input"
                 placeholder="Masukkan nama tugas..."
               />
-              <button id="startStop">Mulai</button>
+              <button class="start-stop">Mulai</button>
             </div>
           </div>
 
